# oxidebar

./: Cargo.toml  README.md  config.toml  install.sh
src/: bar.rs  bars.rs  config.rs  config.toml  main.rs  modules.rs  niri.rs
