[package]
name = "oxidebar"
version = "0.1.0"
edition = "2021"

[dependencies]
# Wayland layer-shell support
smithay-client-toolkit = "0.18"
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.2", features = ["client"] }

# Terminal rendering
ratatui = "0.26"

toml = "0.8"

# System information
sysinfo = "0.30"

# Error handling
anyhow = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Time handling
chrono = "0.4"

# Font rendering
fontdue = "0.8"

# Memory mapping
memmap2 = "0.9"

# JSON parsing for niri IPC
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
